--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,4 +7,25 @@ html,
 body,
 :root {
   height: 100%;
+  font-family: Jost;
+}
+
+.secion__1 {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: bottom right,
+    left,
+    right;
+  background-image: url(bg_1.png), url(bg_2.png), url(bg_3.png), url(bg_4.png), url(bg_5.png);
+}
+
+.banner__main__text {
+  color: #131313;
+  text-shadow: 7px 6px 0px #37B34A;
+  font-family: Murs Gothic;
+  font-size: 150px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
 }
