--- a/src/index.css
+++ b/src/index.css
@@ -115,12 +115,6 @@ body,
   justify-content: center;
 }
 
-button {
-  background: white;
-  border: solid 2px black;
-  padding: 0.375em 1.125em;
-  font-size: 1rem;
-}
 
 .button-arounder {
   font-size: 2rem;
@@ -297,4 +291,71 @@ html {
   font-style: normal;
   font-weight: 800;
   line-height: normal;
+}
+
+
+.nav-icon-5 {
+  width: 60px;
+  height: 30px;
+  margin: 20px 20px;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  color: #fff;
+}
+
+.nav-icon-5 button {
+  background-color: transparent;
+}
+
+.nav-icon-5 span {
+  background-color: #FFF;
+  position: absolute;
+  border-radius: 2px;
+  transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+  width: 100%;
+  height: 4px;
+  transition-duration: 500ms
+}
+
+.nav-icon-5 span:nth-child(1) {
+  top: 0px;
+  left: 0px;
+}
+
+.nav-icon-5 span:nth-child(2) {
+  top: 13px;
+  left: 0px;
+  opacity: 1;
+}
+
+.nav-icon-5 span:nth-child(3) {
+  bottom: 0px;
+  left: 0px;
+}
+
+.nav-icon-5:not(.open):hover span:nth-child(1) {
+  transform: rotate(-3deg) scaleY(1.1);
+}
+
+.nav-icon-5:not(.open):hover span:nth-child(2) {
+  transform: rotate(3deg) scaleY(1.1);
+}
+
+.nav-icon-5:not(.open):hover span:nth-child(3) {
+  transform: rotate(-4deg) scaleY(1.1);
+}
+
+.nav-icon-5.open span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 13px;
+}
+
+.nav-icon-5.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.nav-icon-5.open span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: 13px;
 }
